--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="form-container" class="form-container">
-        <h1>Método DDA - Equipo Dinamita</h1>
+        <h1>Método DDA</h1>
         <p>Equipo: Dinamita</p>
         <form id="formulario" class="form">
             <div id="form-group-x0" class="form-group">
@@ -63,10 +63,10 @@
             <tbody>
             </tbody>
         </table>
-        <audio id="audio-siiuuu" src="../CR7-Siuuu.mp3"></audio> <!-- Elemento de audio -->
+        <audio id="audio-siiuuu" src="{{ url_for('static', filename='CR7-Siuuu.mp3') }}"></audio> <!-- Elemento de audio -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
-    <script src="../static/home.js"></script>
+    <script src="{{ url_for('static', filename='home.js') }}"></script>
 </body>
 </html>
