--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="../static/home.css">
 </head>
 <body>
-    <div id="form-container" class="form-container">
+    <div id="curtain-left" class="curtain"></div>
+    <div id="curtain-right" class="curtain"></div>
+    <div id="welcome-animation" class="welcome-animation">
+        <h1>Bienvenido al Método DDA</h1>
+    </div>
+    <div id="form-container" class="form-container" style="display: none;">
         <h1>Método DDA</h1>
         <p>Equipo: Dinamita</p>
         <form id="formulario" class="form">
