--- a/static/home.css
+++ b/static/home.css
@@ -79,13 +79,14 @@ body {
     top: 0;
     width: 50%;
     height: 100%;
-    background-color: #000;
+    background-color: #144153;
     z-index: 1000;
-    animation: curtainOpen 2s forwards;
-    background-image: linear-gradient(to bottom, #000, #333);
+    animation: curtainOpen 2s forwards, curtainWave 2s infinite;
+    background-image: linear-gradient(to bottom, #1c4e61, #333);
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     overflow: hidden;
-    pointer-events: none; /* Asegúrate de que las cortinas no interfieran con los eventos del ratón */
+    pointer-events: none; 
+    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), 0 calc(100% - 20px));
 }
 
 #curtain-left {
@@ -107,7 +108,28 @@ body {
     }
 }
 
+@keyframes curtainWave {
+    0%, 100% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-10px);
+    }
+}
 
+/* Estilos para el borde inferior ondulado */
+.curtain::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: radial-gradient(circle at 10px 10px, transparent 15px, #0e2d39 16px);
+    background-size: 20px 20px;
+    background-repeat: repeat-x;
+    z-index: 1001;
+}
 /* Animación de bienvenida */
 .welcome-animation {
     position: fixed;
@@ -115,7 +137,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #2e363c;
     color: #e81cff;
     font-size: 24px;
     font-weight: 600;
