--- a/static/home.css
+++ b/static/home.css
@@ -1,415 +1,513 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
-    color: #333;
-    padding: 20px;
-    width: 97%;
-    height: 100%;
-    --color: rgba(114, 114, 114, 0.3);
-    background-color: #191a1a;
-    background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
-        linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
-    background-size: 55px 55px;
-    z-index: 1001;
+  font-family: 'Arial', sans-serif;
+  background-color: #f4f4f9;
+  color: #333;
+  padding: 20px;
+  width: 97%;
+  height: 100%;
+  --color: rgba(114, 114, 114, 0.3);
+  background-color: #191a1a;
+  background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
+      linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
+  background-size: 55px 55px;
+  z-index: 1001;
 }
 
+.button {
+  width: 140px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: .3s;
+  overflow: hidden;
+  position: relative;
+}
+
+.button-text {
+  color: white;
+  transition-duration: .3s;
+}
+
+.svgIcon {
+  width: 0;
+  height: 0;
+  transition-duration: .3s;
+  opacity: 0;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.button:hover {
+  background-color: rgb(255, 69, 69);
+}
+
+.button:hover .button-text {
+  opacity: 0;
+  transition-duration: .3s;
+}
+
+.button:hover .svgIcon {
+  width: 24px;
+  height: 24px;
+  opacity: 1;
+  transition-duration: .3s;
+}
 .form-container {
-    max-width: 800px;
-    margin: 0 auto;
-    background: linear-gradient(#212121, #212121) padding-box,
-                linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
-    border: 2px solid transparent;
-    padding: 32px 24px;
-    font-size: 14px;
-    font-family: inherit;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    box-sizing: border-box;
-    border-radius: 16px;
-    z-index: 1001;
-    position: relative;
-  }
+  max-width: 1200px;
+  margin: 0 auto;
+  background: linear-gradient(#212121, #212121) padding-box,
+              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  padding: 32px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 16px;
+  z-index: 1001;
+  position: relative;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.flex-item {
+  margin: 10px;
+}
+
+.form-section {
+  flex: 1;
+  max-width: 300px; /* Ajusta el ancho máximo del formulario */
+}
+.graph-section canvas {
+    width: 100%;
+    height: 80%;
+}
+.graph-section {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.table-section {
+  flex: 1;
+  max-width: 300px; /* Ajusta el ancho máximo de la tabla */
+}
+
+#tabla-puntos {
+  width: 100%;
+  border-collapse: separate; /* Cambia a 'separate' para que los bordes redondeados funcionen correctamente */
+  border-spacing: 0; /* Elimina el espacio entre las celdas */
+  animation: fadeIn 1s ease-in-out;
+  border-radius: 10px; /* Aplica el borde redondeado a la tabla */
+  overflow: hidden; /* Asegura que los bordes redondeados se apliquen correctamente */
+}
+
+#tabla-puntos th, #tabla-puntos td {
+  border: 2px solid #ffffff;
+  padding: 8px;
   
-  .form-container button:active {
-    scale: 0.95;
+}
+
+#tabla-puntos th {
+  background-color: #870b95;
+  text-align: left;
+}
+
+.form-container button:active {
+  scale: 0.95;
+}
+
+.form-container .form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-container .form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.form-container .form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #dbeeee;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.form-container .form-group input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #fff;
+  font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #414141;
+}
+
+.form-container h1 {
+  color: #e81cff;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+
+.form-container p {
+  color: #e81cff;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+
+.form-container .form-group input::placeholder {
+  opacity: 0.5;
+}
+
+.form-container .form-group input:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.form-container .form-group textarea:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+h1 {
+  text-align: center;
+  color: #444;
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+form label {
+  flex: 1 1 100%;
+  font-weight: bold;
+}
+
+form input {
+  flex: 1 1 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+canvas {
+  margin-top: 20px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+table {
+  width: 100%;
+  margin-top: 20px;
+  border-collapse: collapse;
+  animation: fadeIn 1s ease-in-out;
+  color: #fff;
+}
+
+table, th, td {
+  border: 1px solid #ddd;
+}
+
+th, td {
+  padding: 12px;
+  text-align: center;
+}
+
+th {
+  background-color: #4abebe;
+  color: #fff;
+}
+
+tr:nth-child(even) {
+  background-color: #294040;
+}
+
+tr:hover {
+  background-color: #d134ff;
+  transition: background-color 0.3s ease;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
   }
-  
-  .form-container .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  to {
+      opacity: 1;
   }
-  
-  .form-container .form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-  }
-  
-  .form-container .form-group label {
-    display: block;
-    margin-bottom: 5px;
-    color: #dbeeee;
-    font-weight: 600;
-    font-size: 12px;
+}
+
+.form-submit-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  background-color: #000;
+  color: #fff;
+  font-size: 16px;
+  letter-spacing: 1px;
+  border: 0.5px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 8px;
+  height: 65px;
+  width: 200px;
+  padding: 12px;
+  border-radius: 15px 15px 12px 12px;
+  cursor: pointer;
+  position: relative;
+  will-change: transform;
+  transition: all .1s ease-in-out 0s;
+  user-select: none;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+  background-position: top right, top right;
+  background-size: 100% 100%, 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset -4px -10px 0px rgba(255, 255, 255, 0.4),
+    inset -4px -8px 0px rgba(0, 0, 0, 0.3),
+    0px 2px 1px rgba(0, 0, 0, 0.3),
+    0px 2px 1px rgba(255, 255, 255, 0.1);
+  transform: perspective(70px) rotateX(5deg) rotateY(0deg);
+}
+
+.form-submit-btn span {
+  transform: translateY(-10px);
+}
+
+.form-submit-btn::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.5));
+  z-index: -1;
+  border-radius: 15px;
+  box-shadow: inset 4px 0px 0px rgba(255, 255, 255, 0.1),
+    inset 4px -8px 0px rgba(0, 0, 0, 0.3);
+  transition: all .1s ease-in-out 0s;
+}
+
+.form-submit-btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+  background-position: top right, top right;
+  background-size: 100% 100%, 100% 100%;
+  background-repeat: no-repeat;
+  z-index: -1;
+  border-radius: 15px;
+  transition: all .1s ease-in-out 0s;
+}
+
+.form-submit-btn:active {
+  will-change: transform;
+  transform: perspective(80px) rotateX(5deg) rotateY(1deg) translateY(3px) scale(0.96);
+  height: 64px;
+  border: 0.25px solid rgba(0, 0, 0, 0.2);
+  box-shadow: inset -4px -8px 0px rgba(255, 255, 255, 0.2),
+    inset -4px -6px 0px rgba(0, 0, 0, 0.8),
+    0px 1px 0px rgba(0, 0, 0, 0.9),
+    0px 1px 0px rgba(255, 255, 255, 0.2);
+  transition: all .1s ease-in-out 0s;
+}
+
+.form-submit-btn::after:active {
+  background-image: linear-gradient(to top,rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.2));
+}
+
+.form-submit-btn:active::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 5%;
+  left: 20%;
+  width: 50%;
+  height: 80%;
+  background-color: rgba(255, 255, 255, 0.1);
+  animation: overlay 0.1s ease-in-out 0s;
+  pointer-events: none;
+}
+
+.form-submit-btn svg {
+  width: 15px;
+  height: 15px;
+}
+
+@keyframes overlay {
+  from {
+    opacity: 0;
   }
 
-  
-  .form-container .form-group input {
-    width: 100%;
-    padding: 12px 16px;
-    border-radius: 8px;
-    color: #fff;
-    font-family: inherit;
-    background-color: transparent;
-    border: 1px solid #414141;
+  to {
+    opacity: 1;
   }
-  
-  .form-container h1 {
-    color: #e81cff;
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 16px;
-  }
+}
+
+.form-submit-btn:focus {
+  outline: none;
+}
+
 /* Estilos para las cortinas */
 .curtain {
-    position: fixed;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    background-color: #144153;
-    z-index: 1000;
-    animation: curtainOpen 2s forwards, curtainWave 2s infinite;
-    background-image: linear-gradient(to bottom, #1c4e61, #333);
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-    pointer-events: none; 
-    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), 0 calc(100% - 20px));
+  position: fixed;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #144153;
+  z-index: 1000;
+  animation: curtainOpen 2s forwards, curtainWave 2s infinite;
+  background-image: linear-gradient(to bottom, #1c4e61, #333);
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  pointer-events: none; 
+  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), 0 calc(100% - 20px));
 }
 
 #curtain-left {
-    left: 0;
-    animation-delay: 1s;
+  left: 0;
+  animation-delay: 1s;
 }
 
 #curtain-right {
-    right: 0;
-    animation-delay: 1s;
+  right: 0;
+  animation-delay: 1s;
 }
 
 @keyframes curtainOpen {
-    0% {
-        width: 50%;
-    }
-    100% {
-        width: 0;
-    }
+  0% {
+      width: 50%;
+  }
+  100% {
+      width: 0;
+  }
 }
 
 @keyframes curtainWave {
-    0%, 100% {
-        transform: translateX(0);
-    }
-    50% {
-        transform: translateX(-10px);
-    }
+  0%, 100% {
+      transform: translateX(0);
+  }
+  50% {
+      transform: translateX(-10px);
+  }
 }
 
 /* Estilos para el borde inferior ondulado */
 .curtain::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 20px;
-    background: radial-gradient(circle at 10px 10px, transparent 15px, #0e2d39 16px);
-    background-size: 20px 20px;
-    background-repeat: repeat-x;
-    z-index: 1001;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  background: radial-gradient(circle at 10px 10px, transparent 15px, #0e2d39 16px);
+  background-size: 20px 20px;
+  background-repeat: repeat-x;
+  z-index: 1001;
 }
+
 /* Animación de bienvenida */
 .welcome-animation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #2e363c;
-    color: #e81cff;
-    font-size: 24px;
-    font-weight: 600;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-    animation: fadeOut 1s forwards;
-    animation-delay: 2s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2e363c;
+  color: #e81cff;
+  font-size: 24px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  animation: fadeOut 1s forwards;
+  animation-delay: 2s;
 }
 
 @keyframes fadeOut {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+  0% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+  }
 }
 
 /* Animaciones de rebote para los elementos del formulario */
 @keyframes bounceIn {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-30px);
-    }
-    60% {
-        transform: translateY(-15px);
-    }
+  0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+  }
+  40% {
+      transform: translateY(-30px);
+  }
+  60% {
+      transform: translateY(-15px);
+  }
 }
 
 .form-group, .form-submit-btn {
-    animation: bounceIn 1s;
-    animation-fill-mode: both;
-    opacity: 0;
+  animation: bounceIn 1s;
+  animation-fill-mode: both;
+  opacity: 0;
 }
 
 .form-group {
-    animation-delay: 3s;
+  animation-delay: 3s;
 }
 
 .form-submit-btn {
-    animation-delay: 3.5s;
+  animation-delay: 3.5s;
 }
 
 #loading {
-    animation-delay: 4s;
+  animation-delay: 4s;
 }
 
 #grafica {
-    animation-delay: 4.5s;
+  animation-delay: 4.5s;
 }
 
 #caso-determinado {
-    animation-delay: 5s;
+  animation-delay: 5s;
 }
 
 #tabla-puntos {
-    animation-delay: 5.5s;
-}
-  .form-container p {
-    color: #e81cff;
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 16px;
-  }
-  
-  .form-container .form-group input::placeholder {
-    opacity: 0.5;
-  }
-  
-  .form-container .form-group input:focus {
-    outline: none;
-    border-color: #e81cff;
-  }
-  
-  .form-container .form-group textarea:focus {
-    outline: none;
-    border-color: #e81cff;
-  }
-    
-h1 {
-    text-align: center;
-    color: #444;
+  animation-delay: 5.5s;
 }
 
-form {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 20px;
-}
-
-form label {
-    flex: 1 1 100%;
-    font-weight: bold;
-}
-
-form input {
-    flex: 1 1 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-
-
-canvas {
-    margin-top: 20px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-table {
-    width: 100%;
-    margin-top: 20px;
-    border-collapse: collapse;
-    animation: fadeIn 1s ease-in-out;
-    color: #fff;
-}
-
-table, th, td {
-    border: 1px solid #ddd;
-}
-
-th, td {
-    padding: 12px;
-    text-align: center;
-}
-
-th {
-    background-color: #4abebe;
-    color: #fff;
-}
-
-tr:nth-child(even) {
-    background-color: #294040;
-}
-
-tr:hover {
-    background-color: #d134ff;
-    transition: background-color 0.3s ease;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-/*Boton */ 
-/*Boton */ 
-.form-submit-btn {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    background-color: #000;
-    color: #fff;
-    font-size: 16px;
-    letter-spacing: 1px;
-    border: 0.5px solid rgba(0, 0, 0, 0.1);
-    padding-bottom: 8px;
-    height: 65px;
-    width: 200px;
-    padding: 12px;
-    border-radius: 15px 15px 12px 12px;
-    cursor: pointer;
-    position: relative;
-    will-change: transform;
-    transition: all .1s ease-in-out 0s;
-    user-select: none;
-    /* Add gradient shading to each side */
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
-      linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)); /* Changed bottom to top */
-    background-position: top right, top right; /* Changed bottom to top */
-    background-size: 100% 100%, 100% 100%;
-    background-repeat: no-repeat;
-    box-shadow: inset -4px -10px 0px rgba(255, 255, 255, 0.4),
-      inset -4px -8px 0px rgba(0, 0, 0, 0.3),
-      0px 2px 1px rgba(0, 0, 0, 0.3),
-      0px 2px 1px rgba(255, 255, 255, 0.1);
-    transform: perspective(70px) rotateX(5deg) rotateY(0deg);
-  }
-  
-  .form-submit-btn span {
-    transform: translateY(-10px);
-  }
-  
-  .form-submit-btn::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-image: linear-gradient(to top, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.5)); /* Changed bottom to top */
-    z-index: -1;
-    border-radius: 15px;
-    box-shadow: inset 4px 0px 0px rgba(255, 255, 255, 0.1),
-      inset 4px -8px 0px rgba(0, 0, 0, 0.3);
-    transition: all .1s ease-in-out 0s;
-  }
-  
-  .form-submit-btn::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
-      linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)); /* Changed bottom to top */
-    background-position: top right, top right; /* Changed bottom to top */
-    background-size: 100% 100%, 100% 100%;
-    background-repeat: no-repeat;
-    z-index: -1;
-    border-radius: 15px;
-    transition: all .1s ease-in-out 0s;
-  }
-  
-  .form-submit-btn:active {
-    will-change: transform;
-    transform: perspective(80px) rotateX(5deg) rotateY(1deg) translateY(3px) scale(0.96);
-    height: 64px;
-    border: 0.25px solid rgba(0, 0, 0, 0.2);
-    box-shadow: inset -4px -8px 0px rgba(255, 255, 255, 0.2),
-      inset -4px -6px 0px rgba(0, 0, 0, 0.8),
-      0px 1px 0px rgba(0, 0, 0, 0.9),
-      0px 1px 0px rgba(255, 255, 255, 0.2);
-    transition: all .1s ease-in-out 0s;
-  }
-  
-  .form-submit-btn::after:active {
-    background-image: linear-gradient(to top,rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.2)); /* Changed bottom to top */
-  }
-  
-  .form-submit-btn:active::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 5%;
-    left: 20%;
-    width: 50%;
-    height: 80%;
-    background-color: rgba(255, 255, 255, 0.1);
-    animation: overlay 0.1s ease-in-out 0s;
-    pointer-events: none;
-  }
-  
-  .form-submit-btn svg {
-    width: 15px;
-    height: 15px;
-  }
-  
-  @keyframes overlay {
-    from {
-      opacity: 0;
-    }
-  
-    to {
-      opacity: 1;
-    }
-  }
-  
-  .form-submit-btn:focus {
-    outline: none;
-  }
 /* Animación de carga */
 .wheel-and-hamster {
     --dur: 1s;
