--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="../static/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div id="curtain-left" class="curtain"></div>
@@ -16,58 +17,71 @@
     </div>
     <div id="form-container" class="form-container" style="display: none;">
         <h1>Método DDA</h1>
-        <p>Equipo: Dinamita</p>
-        <form id="formulario" class="form">
-            <div id="form-group-x0" class="form-group">
-                <label for="x0">Coordenada x0:</label>
-                <input type="number" id="x0" name="x0" required>
-            </div>
-            <div id="form-group-y0" class="form-group">
-                <label for="y0">Coordenada y0:</label>
-                <input type="number" id="y0" name="y0" required>
-            </div>
-            <div id="form-group-x1" class="form-group">
-                <label for="x1">Coordenada x1:</label>
-                <input type="number" id="x1" name="x1" required>
-            </div>
-            <div id="form-group-y1" class="form-group">
-                <label for="y1">Coordenada y1:</label>
-                <input type="number" id="y1" name="y1" required>
-            </div>
-            <button id="form-submit-btn" class="form-submit-btn" type="submit">Calcular</button>
-        </form>
-        <div id="loading" class="wheel-and-hamster" style="display: none;">
-            <div class="wheel"></div>
-            <div class="hamster">
-                <div class="hamster__body">
-                    <div class="hamster__head">
-                        <div class="hamster__ear"></div>
-                        <div class="hamster__eye"></div>
-                        <div class="hamster__nose"></div>
+        <div class="flex-container">
+            <div class="flex-item form-section">
+                <form id="formulario" class="form">
+                    <div id="form-group-x0" class="form-group">
+                        <label for="x0">Coordenada x0:</label>
+                        <input type="number" id="x0" name="x0" required>
                     </div>
-                    <div class="hamster__limb hamster__limb--fr"></div>
-                    <div class="hamster__limb hamster__limb--fl"></div>
-                    <div class="hamster__limb hamster__limb--br"></div>
-                    <div class="hamster__limb hamster__limb--bl"></div>
-                    <div class="hamster__tail"></div>
-                </div>
+                    <div id="form-group-y0" class="form-group">
+                        <label for="y0">Coordenada y0:</label>
+                        <input type="number" id="y0" name="y0" required>
+                    </div>
+                    <div id="form-group-x1" class="form-group">
+                        <label for="x1">Coordenada x1:</label>
+                        <input type="number" id="x1" name="x1" required>
+                    </div>
+                    <div id="form-group-y1" class="form-group">
+                        <label for="y1">Coordenada y1:</label>
+                        <input type="number" id="y1" name="y1" required>
+                    </div>
+                    <button id="form-submit-btn" class="form-submit-btn" type="submit">Calcular</button>
+                    <button type="button" class="button" id="clear-button">
+                        <span class="button-text">Limpiar</span>
+                        <svg viewBox="0 0 448 512" class="svgIcon">
+                            <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"></path>
+                        </svg>
+                    </button>
+                </form>
             </div>
-            <div class="spoke"></div>
+            <div class="flex-item graph-section">
+                <div id="loading" class="wheel-and-hamster" style="display: none;">
+                    <div class="wheel"></div>
+                    <div class="hamster">
+                        <div class="hamster__body">
+                            <div class="hamster__head">
+                                <div class="hamster__ear"></div>
+                                <div class="hamster__eye"></div>
+                                <div class="hamster__nose"></div>
+                            </div>
+                            <div class="hamster__limb hamster__limb--fr"></div>
+                            <div class="hamster__limb hamster__limb--fl"></div>
+                            <div class="hamster__limb hamster__limb--br"></div>
+                            <div class="hamster__limb hamster__limb--bl"></div>
+                            <div class="hamster__tail"></div>
+                        </div>
+                    </div>
+                    <div class="spoke"></div>
+                </div>
+                <canvas id="grafica" width="200" height="200"></canvas>
+                <p id="caso-determinado"></p> <!-- Elemento para mostrar el caso determinado -->
+            </div>
+            <div class="flex-item table-section">
+                <table id="tabla-puntos">
+                    <thead>
+                        <tr>
+                            <th>Iteración</th>
+                            <th>X</th>
+                            <th>Y</th>
+                            <th>Pendiente</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <canvas id="grafica" width="300" height="300"></canvas>
-        <p id="caso-determinado"></p> <!-- Elemento para mostrar el caso determinado -->
-        <table id="tabla-puntos">
-            <thead>
-                <tr>
-                    <th>Iteración</th>
-                    <th>X</th>
-                    <th>Y</th>
-                    <th>Pendiente</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
         <audio id="audio-siiuuu" src="{{ url_for('static', filename='CR7-Siuuu.mp3') }}"></audio> <!-- Elemento de audio -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
