--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="../static/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 </head>
 <body>
     <div id="curtain-left" class="curtain"></div>
@@ -20,21 +21,35 @@
         <div class="flex-container">
             <div class="flex-item form-section">
                 <form id="formulario" class="form">
-                    <div id="form-group-x0" class="form-group">
-                        <label for="x0">Coordenada x0:</label>
-                        <input type="number" id="x0" name="x0" required>
+                    <div class="form-row">
+                        <div id="form-group-xa" class="form-group">
+                            <label for="xa">Coordenada xa:</label>
+                            <input type="number" id="xa" name="xa" required>
+                        </div>
+                        <div id="form-group-ya" class="form-group">
+                            <label for="ya">Coordenada ya:</label>
+                            <input type="number" id="ya" name="ya" required>
+                        </div>
                     </div>
-                    <div id="form-group-y0" class="form-group">
-                        <label for="y0">Coordenada y0:</label>
-                        <input type="number" id="y0" name="y0" required>
+                    <div class="form-row">
+                        <div id="form-group-xb" class="form-group">
+                            <label for="xb">Coordenada xb:</label>
+                            <input type="number" id="xb" name="xb" required>
+                        </div>
+                        <div id="form-group-yb" class="form-group">
+                            <label for="yb">Coordenada yb:</label>
+                            <input type="number" id="yb" name="yb" required>
+                        </div>
                     </div>
-                    <div id="form-group-x1" class="form-group">
-                        <label for="x1">Coordenada x1:</label>
-                        <input type="number" id="x1" name="x1" required>
-                    </div>
-                    <div id="form-group-y1" class="form-group">
-                        <label for="y1">Coordenada y1:</label>
-                        <input type="number" id="y1" name="y1" required>
+                    <div class="form-row">
+                        <div id="form-group-xc" class="form-group">
+                            <label for="xc">Coordenada xc:</label>
+                            <input type="number" id="xc" name="xc" required>
+                        </div>
+                        <div id="form-group-yc" class="form-group">
+                            <label for="yc">Coordenada yc:</label>
+                            <input type="number" id="yc" name="yc" required>
+                        </div>
                     </div>
                     <button id="form-submit-btn" class="form-submit-btn" type="submit">Calcular</button>
                     <button type="button" class="button" id="clear-button">
@@ -67,14 +82,44 @@
                 <canvas id="grafica" width="200" height="200"></canvas>
                 <p id="caso-determinado"></p> <!-- Elemento para mostrar el caso determinado -->
             </div>
+        </div>
+        <div class="flex-container-table">
             <div class="flex-item table-section">
-                <table id="tabla-puntos">
+                <h2>Iteraciones Lado AB</h2>
+                <table id="tabla-puntos-ab">
                     <thead>
                         <tr>
                             <th>Iteración</th>
                             <th>X</th>
                             <th>Y</th>
-                            <th>Pendiente</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+            <div class="flex-item table-section">
+                <h2>Iteraciones Lado BC</h2>
+                <table id="tabla-puntos-bc">
+                    <thead>
+                        <tr>
+                            <th>Iteración</th>
+                            <th>X</th>
+                            <th>Y</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+            <div class="flex-item table-section">
+                <h2>Iteraciones Lado CA</h2>
+                <table id="tabla-puntos-ca">
+                    <thead>
+                        <tr>
+                            <th>Iteración</th>
+                            <th>X</th>
+                            <th>Y</th>
                         </tr>
                     </thead>
                     <tbody>
