Triangulo diseño web

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
         <h1>Bienvenido al Método DDA</h1>
     </div>
     <div id="form-container" class="form-container" style="display: none;">
-        <h1>Método DDA</h1>
+        <h1>Método DDA Triangulo</h1>
         <div class="flex-container">
             <div class="flex-item form-section">
                 <form id="formulario" class="form">
