--- a/static/home.css
+++ b/static/home.css
@@ -5,8 +5,8 @@ body {
   padding: 20px;
   width: 97%;
   height: 100%;
-  --color: rgba(114, 114, 114, 0.3);
-  background-color: #191a1a;
+  --color: rgba(106, 179, 180, 0.505);
+  background-color: #4c4d82;
   background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
       linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
   background-size: 55px 55px;
