--- a/static/home.css
+++ b/static/home.css
@@ -65,8 +65,8 @@ body {
 .form-container {
   max-width: 1400px;
   margin: 0 auto;
-  background: linear-gradient(#212121, #212121) padding-box,
-              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  background: linear-gradient(#833535, #212121) padding-box,
+              linear-gradient(145deg, transparent 35%,#3e73a2, #40c9ff) border-box;
   border: 2px solid transparent;
   padding: 32px 24px;
   font-size: 14px;
