--- a/templates/home.html
+++ b/templates/home.html
@@ -11,11 +11,12 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 </head>
 <body>
-    <div id="curtain-left" class="curtain"></div>
-    <div id="curtain-right" class="curtain"></div>
-    <div id="welcome-animation" class="welcome-animation">
-        <h1>Bienvenido al Método DDA</h1>
-    </div>
+<div id="curtain-left" class="curtain"></div>
+<div id="curtain-right" class="curtain"></div>
+<div id="welcome-animation" class="welcome-animation">
+    <h1>BIENVENIDOS AL METODO DDA</h1>
+</div>
+
     <div id="form-container" class="form-container" style="display: none;">
         <h1>Método DDA Triangulo</h1>
         <div class="flex-container">
