--- a/static/home.css
+++ b/static/home.css
@@ -65,7 +65,7 @@ body {
 .form-container {
   max-width: 1400px;
   margin: 0 auto;
-  background: linear-gradient(#181414, #000000) padding-box,  /*caja de almacenamiento del programa*/
+  background: linear-gradient(#181414, #41a6c4) padding-box,  /*caja de almacenamiento del programa*/
               linear-gradient(145deg, transparent 35%,#f8f8f8, #0c0e0f) border-box;
   border: 2px solid transparent;
   padding: 32px 24px;
