--- a/static/home.css
+++ b/static/home.css
@@ -83,6 +83,8 @@ body {
 .graph-section canvas {
     width: 100%;
     height: 70%;
+    max-width: 600px;
+    max-height: 400px;
 }
 
 .graph-section {
