--- a/templates/home.html
+++ b/templates/home.html
@@ -14,10 +14,11 @@
     <div id="curtain-left" class="curtain"></div>
     <div id="curtain-right" class="curtain"></div>
     <div id="welcome-animation" class="welcome-animation">
-        <h1>Bienvenido al Algoritmo del Punto Medio</h1>
+        <h2>Bienvenido al Algoritmo del Punto Medio</h2>
     </div>
     <div id="form-container" class="form-container" style="display: none;">
         <h1>Algoritmo del Punto Medio para Círculos</h1>
+        <h3>Equipo: Genios Unidos</h3>
         <div class="flex-container">
             <div class="flex-item form-section">
                 <form id="formulario" class="form">
